Update publisher name in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "ads-column-chooser",
 	"displayName": "Azure Data Studio Column Chooser",
 	"description": "The Column Chooser extension for Azure Data Studio allows users to easily select and customize columns in SQL SELECT statements.",
-	"publisher": "Sean Stalker",
+	"publisher": "ssta604",
 	"version": "0.0.3",
 	"engines": {
 		"vscode": "^1.39.0",
